--- a/index.html
+++ b/index.html
@@ -64,7 +64,100 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                EXPERIENCE
+                    2017
+                    Became 45th president of the United States
+
+                    2016
+                    Won election race with 77 votes more than Clinton, yippe-kee-yay!
+
+                    2015
+                    Became the most important Republican nominating for presidential election run
+
+                    2009
+                    Changed my mind and became Republican again
+
+                    2005
+                    Started Trump University with Michael Sexton and Jonathan Spitalny: no grades, certificates and other bureaucracy, but program offered courses in real estate, asset management entrepreneurship, and wealth creation. 98% students gave positive reviews while studying, however some of these ungrateful gringos filed lawsuits against Trump University after the course. I had to pay $25 million to settle that...
+
+                    2002
+                    Acquired the former Hotel Delmonico, which was renovated and reopened in 2004 as the Trump Park Avenue. I sure do like my surname!
+
+                    2001
+                    Completed Trump World Tower and joined the Democratic Party
+
+                    1999
+                    Started buying golf courses. They are very cheap, I have 18 of them now in USA and abroad! Also switched to the Reform Party that year
+
+                    1997
+                    Began a multi-building development along the Hudson River, which was named Trump Place. Me and the other investors sold our shares for $1.8 billion and that was then the biggest residential sale in the history of New York City
+
+                    1996
+                    Acquired the Bank of Manhattan Trust Building, which was a vacant seventy-one story skyscraper on Wall Street. After an extensive renovation, the high-rise was renamed the Trump Building
+
+                    1994
+                    Refurbished the Gulf and Western Building on Columbus Circle, turned it into a 44-story luxury property known as Trump International Hotel and Tower
+
+                    1989 ― 1992
+                    Ran a second hand airline called Trump Shuttle. What a waste of money, I had to sell it, now it is American Airlines Shuttle, btw
+
+                    1989, 1990
+                    Learned about Tour de France and decided to hold my very own Tour de Trump. Is America not great enough for that cycling competition?
+
+                    1988
+                    Acquired the Plaza Hotel in Manhattan for $407 million, invested $50 million to restore the building and boosted it from three-star to four-star hotel (I called it "the Mona Lisa" and sold it for a lot of cash in 1995)
+
+                    1987
+                    Registered as a Republican
+
+                    1985
+                    I bought the Mar-a-Lago estate in Palm Beach and turned it into a private club.You can join if you pay $200K initiation fee (and there is another annual fee for members, it is very expensive to be rich). That year I also opened a casino called Trump Castle. My wife Ivana became a manager, because she is another Trump!
+
+                    1983
+                    I purchased New Jersey Generals, an American football team. I changed team's play schedule and filed an antitrust lawsuit against United States Football League, so NJG are not doing so good now, but back then they were great!
+
+                    1980
+                    Started developing the Trump Tower skyscraper in Manhattan, I payed a crew of undocumented Polish workers to demolish the historic Bonwit Teller store, including art deco features. All this to make architectural critic Paul Goldberger say in 1983 that the tower's atrium is "the most pleasant interior public space to be completed in New York in some years". At the same time I also started a repair job on the Wollman Rink in Central Park and completed the work in three months for $1.95 million, which was $775,000 less than the initial budget!
+
+                    1978
+                    Purchased a 50 percent stake in the derelict Commodore Hotel and turned it into the Grand Hyatt Hotel in 2 years of remodeling
+
+                    1971
+                    Was promoted to president of the company and renamed it The Trump Organization
+
+                    1968
+                    Began my career at my father's real estate development company, Elizabeth Trump & Son
+
+                    PERSONAL LIFE
+2006
+Melania gained United States citizenship and gave birth to our son, Barron
+
+2005
+Married her
+
+1998
+Met my future third wife, Melania Knauss
+
+1999
+Divorced Marla
+
+1993
+Married Marla and had a daughter, we named her Tiffany, because I like Tiffany & Company jewellery as well
+
+1992
+Started affair with Marla Maples, so I had to divorce. God knows I love nice women, I love them all!
+
+1984
+Birth of Eric Trump
+
+1982
+Birth of Ivanka Trump
+
+1977
+My first son is born. I called him Donald, of course!
+
+1977
+Married Czech model Ivana Zelníčková
               </div>
               <div class="six wide column">
                 <!-- Languages -->
