--- a/index.html
+++ b/index.html
@@ -415,7 +415,6 @@
                     <h3>Languages</h3>
                     <p class="tags small">
                      <h3><span class="language" lang="ru">&#x1f1f7;&#x1f1fa; &#x1f1fa;&#x1f1f8; </span></h3>
-                    </p>
                   </section>
                   <section>
                     <h3>Skills</h3>
@@ -528,6 +527,7 @@
               </div>
             </div>
           </div>
+        </div>
         </div>
       </article>
     </main>
